kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api

spec:
  rules:
    - host: sreejigopal.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  fast-api
                port:
                  number: 80
